# Scraper

./: README.md  pyproject.toml
src/: scarper.py
